--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "as-vue-calendar",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "a calendar component",
-  "main": "dist/as-vue-calendar.common.js",
+  "main": "dist/calendar.common.js",
   "dependencies": {
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0"
